k8s/leads-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leads-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: leads
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: leads
    spec:
      serviceAccountName: sa-pull
      securityContext:
        runAsNonRoot: true
        readOnlyRootFilesystem: true
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: leads
      containers:
        - name: leads
          image: LEADS_IMAGE
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 120"]
